2000-06-15  Michael Snyder  <msnyder@cygnus.com>

	* valops.c (value_cast): Break up long lines.
	* utils.c: Fix comment typo.

2000-06-14  Jim Blandy  <jimb@redhat.com>

	* dwarf2read.c (dump_die): Use the proper printf format for
 	printing DW_UNSND values; they're longs now.

	* dwarf2read.c (dump_die): We can read DW_FORM_data8 now, on
	at least some platforms, so print it out too.

2000-06-14  James E. Wilson  <wilson@bletchleypark.cygnus.com>

	* dwarf2read.c (struct attribute): Change unsnd and snd field types
	to long.
	(read_8_bytes): Change return type to long.
	(read_unsigned_leb128): Change return type to long.  Change type of
	local result to long.  Cast argument of left shift to long.
	(read_signed_leb128): Likewise.

2000-06-14  Pierre Muller  <muller@ics.u-strasbg.fr>

	Add support for Pascal language. Part 1: new files.
	* p-exp.y, p-lang.c, p-lang.h, p-typeprint.c, p-valprint.c: New files.

2000-06-13  Kevin Buettner  <kevinb@redhat.com>

	* ser-ocd.c, symtab.c: Eliminate use of PARAMS from these files.

Tue Jun 13 09:21:23 2000  Jeffrey A Law  (law@cygnus.com)

	* configure.host (hppa*64*): Renamed from hppa2.0w per
	gcc/binutils changes.
	* configure.tgt: Similarly.

2000-06-12  Bill Nottingham <notting@redhat.com>

	Patch applied by Kevin Buettner <kevinb@redhat.com>:

	* ia64-linux-nat.c, gdbserver/low-linux.c (u_offsets):  PT_CR_IFS
	is deprecated.  Use PT_CFM instead.

2000-06-12  Michael Snyder  <msnyder@cygnus.com>

	* breakpoint.c (breakpoint_thread_match): Fix comment.

2000-06-12  Fernando Nasser  <fnasser@cygnus.com>

	* valops.c (value_assign): Adjust the length to take into
	consideration that we are not starting from the beginning.

2000-06-12  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* symfile.c (add_symbol_file_command): Properly reformat "else if"
 	code.
	* coffread.c (coff_symtab_read): Ditto.
	
Mon Jun 12 15:24:04 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* Makefile.in (SER_HARDWIRE): Set using autoconf.