@@ -1,3 +1,7 @@
+2000-06-15  Kevin Buettner  <kevinb@redhat.com>
+
+	* v850ice.c: Eliminate use of PARAMS from this file.
+
 2000-06-15  Michael Snyder  <msnyder@cygnus.com>
 
 	* valops.c (value_cast): Break up long lines.
